# ros2_mcp_gateway

./: .gitignore  LICENSE  README.md  mcp_client.py
.gemini/: settings.json
src/my_package/: CMakeLists.txt  package.xml  setup.py
src/my_package/action/: Navigate.action
src/my_package/launch/: mock_node.launch.py
src/my_package/msg/: Status.msg
src/my_package/my_package/: mock_node.py
src/my_package/srv/: GetStatus.srv
src/ros2_mcp_gateway/: package.xml  setup.cfg  setup.py
src/ros2_mcp_gateway/config/: mcp_gateway.yaml
src/ros2_mcp_gateway/launch/: mcp_gateway.launch.py
src/ros2_mcp_gateway/ros2_mcp_gateway/: gateway_node.py
